manifest/objects/copado__Quality_Gate_Test_From__mdt.object
<CustomObject>
    <fields>
        <fullName>copado__Available_Options__c</fullName>
        <label>Available Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Default_Value__c</fullName>
        <label>Default Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User Story</fullName>
                    <default>true</default>
                    <label>User Story</label>
                </value>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Edit_Mode__c</fullName>
        <label>Edit Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Editable</fullName>
                </value>
                <value>
                    <fullName>Read-Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Info_Message__c</fullName>
        <label>Info Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Is_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Test_Tool__c</fullName>
        <label>Test Tool</label>
        <referenceTo>copado__TestTool__mdt</referenceTo>
        <relationshipLabel>Quality Gate Test From</relationshipLabel>
        <relationshipName>Quality_Gate_Test_From</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Quality Gate Test From</label>
    <pluralLabel>Quality Gate Test From</pluralLabel>
</CustomObject>